Update notification email address in YAML config

--- a/.infra-reconciler.yml
+++ b/.infra-reconciler.yml
@@ -4,4 +4,4 @@ monitor:
   - https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
 
 notify:
-  - viveksb007@gmail.com
+  - viveksbhadauria007@gmail.com
